# signal-watch

./: Cargo.toml  Embed.toml  flash.sh
.cargo/: config.toml
src/: gfx.rs  main.rs  periph.rs
