[package]
authors = ["Ash Walker <ash@ashwalker.net>"]
edition = "2018"
readme = "README.md"
name = "signal-watch"
version = "0.1.0"

[dependencies]
cortex-m = { version = "^0.7", features = ["inline-asm"] }
cortex-m-rt = "^0.7"
panic-halt = "^0.2"
# rubble = "^0.3"
rtt-target = { version = "^0.3", features = ["cortex-m"] }
alloc-cortex-m = "^0.4"
#cortex-m-rtic = "0.6.0-rc.4"
#rtic-core = "^0.3"
embedded-hal = { version = "^0.2", features = ["unproven"] }
nrf52840-hal = { version = "^0.14", features = ["rt"] }
nrf52840-pac = "^0.10"

# this lets you use `cargo fix`!
[[bin]]
name = "signal-watch"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
